Better design and Use Testcontainers
